# aibook

./: .env-example  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  MongoDB.md  README.md  Redis.md  Stripe.md  tailwind.config.js
assets/: main.css  output.css
i18n/ar/: base.json
i18n/en/: base.json
i18n/es/: base.json
i18n/fr/: base.json
src/: ai.rs  components.rs  i18n.rs  lib.rs  main.rs  pages.rs  pay.rs  redis.rs  router.rs  server.rs  theme.rs
src/components/: common.rs  dashboard.rs  features.rs  hero.rs  navbar.rs  pricing.rs  spinner.rs  testimonial.rs
src/components/common/: header.rs  logo.rs
src/components/dashboard/: analytics.rs  books.rs  chat.rs  navbar.rs  profile.rs  sidebar.rs
src/components/dashboard/books/: create.rs  edit.rs  list.rs  read.rs
src/components/dashboard/chat/: panel.rs  sidebar.rs
src/components/dashboard/fields/: input.rs  number.rs  select.rs
src/components/dashboard/profile/: edit.rs  view.rs
src/components/features/: grid.rs  item.rs
src/components/footer/: bottom.rs  contact.rs  links.rs  logo.rs  support.rs
src/components/navbar/: btns.rs  links.rs
src/components/testimonial/: author.rs  rating.rs
src/components/toast/: manager.rs  provider.rs
src/pages/: book.rs  dashboard.rs  home.rs  login.rs  profile.rs  signup.rs  success.rs
src/server/auth/: controller.rs  model.rs  response.rs
src/server/book/: controller.rs  model.rs  request.rs  response.rs
src/server/conversation/: controller.rs  model.rs  request.rs  response.rs
src/server/subscription/: controller.rs  model.rs  request.rs  response.rs
