[package]
name = "aibook"
version = "0.1.0"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router", "html"] }
mongodb = { version = "3.1.0", optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
jsonwebtoken = { version = "9.3.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
tokio = { version = "1.41.1", optional = true }
uuid = { version = "1.11.0", optional = true }
rand = { version = "0.8.5", optional = true }
axum-extra = { version = "0.9.4", features = ["cookie"], optional = true }
rand_core = { version = "0.6.4", features = ["std"], optional = true }
getrandom = { version = "0.2.15", features = ["js"] }
gems = { version = "0.0.9", optional = true }
http-api-isahc-client = { version = "0.2.2", optional = true }
axum = { version = "0.7.7", optional = true }
unsplash-api = { version = "0.1.0", optional = true }
tower-http = { version = "0.6.1", features = ["cors"], optional = true }
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-regular", "font-awesome-brands", "font-awesome-solid"] }
web-sys = { version = "0.3.74", features = ["Selection", "Window"] }
dioxus-web = { version = "0.5.6", features = ["hydrate"], optional = true }
async-stripe = { version = "0.39.1", default-feature = false, features = ["runtime-tokio-hyper-rustls", "billing"], optional = true }
futures-util = { version = "0.3.31" }
dotenv = { version = "0.15.0" }
serde_json = "1.0.133"
anyhow = "1.0.93"
time = "0.3.36"
regex = "1.11.1"
gloo-storage = "0.3.0"
input-rs = { version = "0.2.2", features = ["dio"] }

# Debug
dioxus-logger = "0.5.1"

[features]
default = []
server = [
    "dioxus/axum",
    "axum",
    "unsplash-api",
    "tower-http",
    "http-api-isahc-client",
    "tokio",
    "mongodb",
    "jsonwebtoken",
    "argon2",
    "uuid",
    "rand",
    "axum-extra",
    "rand_core",
    "gems",
    "async-stripe"
]
web = ["dioxus/web", "dioxus-web"]
