[package]
name = "aibook"
version = "0.1.0"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }

dioxus = { version = "0.6.3", features = ["fullstack", "router", "html"] }
mongodb = { version = "3.1.0", optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
jsonwebtoken = { version = "9.3.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
tokio = { version = "1.41.1", optional = true }
uuid = { version = "1.11.0", optional = true }
rand = { version = "0.8.5", optional = true }
axum-extra = { version = "0.9.4", features = ["cookie"], optional = true }
rand_core = { version = "0.6.4", features = ["std"], optional = true }
getrandom = { version = "0.2.15", features = ["js"] }
gems = { version = "0.1.3", optional = true }
http-api-isahc-client = { version = "0.2.2", optional = true }
axum = { version = "0.7.9", optional = true }
unsplash-api = { version = "0.1.0", optional = true }
tower-http = { version = "0.6.1", features = ["cors"], optional = true }
web-sys = { version = "0.3.72", features = ["Selection", "Window"] }
dioxus-web = { version = "0.6.3", features = ["hydrate"], optional = true }
async-stripe = { version = "0.39.1", default-feature = false, features = ["runtime-tokio-hyper-rustls", "billing"], optional = true }
redis = { version = "0.32.3", features = ["tokio-comp", "aio"], optional = true }
reqwest = { version = "0.12.22", optional = true }
futures-util = { version = "0.3.31" }
dotenv = { version = "0.15.0" }
serde_json = "1.0.133"
anyhow = "1.0.93"
time = "0.3.36"
regex = "1.11.1"
gloo-storage = "0.3.0"
input-rs = { version = "0.2.4", features = ["dio"] }
dioxus-logger = "0.6.2"
theme = { version = "0.0.3", features = ["dio"] }
i18nrs = { version = "0.1.7", features = ["dio", "dio-ssr"] }

[features]
default = []
server = [
    "dioxus/server",
    "axum",
    "unsplash-api",
    "tower-http",
    "http-api-isahc-client",
    "tokio",
    "mongodb",
    "jsonwebtoken",
    "argon2",
    "uuid",
    "rand",
    "axum-extra",
    "rand_core",
    "gems",
    "reqwest",
    "async-stripe",
    "redis",
]
web = ["dioxus/web", "dioxus-web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
